--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@iconify/svelte": "^2.2.1",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.13",
     "svelte": "^3.44.0",
     "tailwindcss": "^3.0.24",
     "vite": "^2.9.7"
+  },
+  "dependencies": {
+    "daisyui": "^2.14.3"
   }
 }
